// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SectionSeparator /> should render with a label 1`] = `
.c0.c0.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1.c1.c1.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.c2.c2.c2.c2.c2 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c3.c3.c3.c3.c3 {
  color: hsla(204,9%,42%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.75rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.0625rem;
  -webkit-letter-spacing: -0.15600000000000003px;
  -moz-letter-spacing: -0.15600000000000003px;
  -ms-letter-spacing: -0.15600000000000003px;
  letter-spacing: -0.15600000000000003px;
  margin: 0;
  padding: 0;
}

.c4.c4.c4.c4.c4 {
  background: linear-gradient(to right,hsla(206,10%,29%,0.12),transparent);
  height: 1px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

<div>
  <div
    class="c0"
    data-blade-component="box"
  >
    <div
      class="c1"
      data-blade-component="section-separator"
    >
      <div
        class="c2"
        data-blade-component="base-box"
      >
        <p
          class="c3"
          data-blade-component="text"
          letter-spacing="50"
        >
          Section Title
        </p>
      </div>
      <div
        class=" c4"
        data-blade-component="base-box"
      />
    </div>
  </div>
</div>
`;

exports[`<SectionSeparator /> should render with normal variant 1`] = `
.c0.c0.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1.c1.c1.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.c2.c2.c2.c2.c2 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c3.c3.c3.c3.c3 {
  color: hsla(204,9%,42%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.75rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.0625rem;
  -webkit-letter-spacing: -0.15600000000000003px;
  -moz-letter-spacing: -0.15600000000000003px;
  -ms-letter-spacing: -0.15600000000000003px;
  letter-spacing: -0.15600000000000003px;
  margin: 0;
  padding: 0;
}

.c4.c4.c4.c4.c4 {
  background: linear-gradient(to right,hsla(203,8%,80%,1),transparent);
  height: 1px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

<div>
  <div
    class="c0"
    data-blade-component="box"
  >
    <div
      class="c1"
      data-blade-component="section-separator"
    >
      <div
        class="c2"
        data-blade-component="base-box"
      >
        <p
          class="c3"
          data-blade-component="text"
          letter-spacing="50"
        >
          Normal
        </p>
      </div>
      <div
        class=" c4"
        data-blade-component="base-box"
      />
    </div>
  </div>
</div>
`;

exports[`<SectionSeparator /> should render with subtle variant 1`] = `
.c0.c0.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1.c1.c1.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.c2.c2.c2.c2.c2 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c3.c3.c3.c3.c3 {
  color: hsla(204,9%,42%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.75rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.0625rem;
  -webkit-letter-spacing: -0.15600000000000003px;
  -moz-letter-spacing: -0.15600000000000003px;
  -ms-letter-spacing: -0.15600000000000003px;
  letter-spacing: -0.15600000000000003px;
  margin: 0;
  padding: 0;
}

.c4.c4.c4.c4.c4 {
  background: linear-gradient(to right,hsla(204,8%,88%,1),transparent);
  height: 1px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

<div>
  <div
    class="c0"
    data-blade-component="box"
  >
    <div
      class="c1"
      data-blade-component="section-separator"
    >
      <div
        class="c2"
        data-blade-component="base-box"
      >
        <p
          class="c3"
          data-blade-component="text"
          letter-spacing="50"
        >
          Subtle
        </p>
      </div>
      <div
        class=" c4"
        data-blade-component="base-box"
      />
    </div>
  </div>
</div>
`;

exports[`<SectionSeparator /> should render without a label 1`] = `
.c0.c0.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1.c1.c1.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.c2.c2.c2.c2.c2 {
  background: linear-gradient(to right,hsla(206,10%,29%,0.12),transparent);
  height: 1px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

<div>
  <div
    class="c0"
    data-blade-component="box"
  >
    <div
      class="c1"
      data-blade-component="section-separator"
    >
      <div
        class=" c2"
        data-blade-component="base-box"
      />
    </div>
  </div>
</div>
`;
